--- a/src/app.css
+++ b/src/app.css
@@ -48,7 +48,7 @@ button {
 
 
 .background-img {
-	background-image: url(./img/4.jpg);
+	background-image: url(./img/background-home.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	min-height: 760px;
@@ -151,7 +151,7 @@ button {
 
 
 .background-img-green {
-	background-image: url(img/5.jpg);
+	background-image: url(./img/background-green.jpg);
 	background-repeat: no-repeat;
 	height: 460px;
     margin: 80px 0;
@@ -170,4 +170,68 @@ button {
 	color: white;
 	font-size: 56px;
 	font-family: shabnam;
+}
+
+
+.Privacy {
+	background-color: #202020;
+	padding:  64px 32px;
+
+}
+
+
+.text-privacy-bold {
+	color: white;
+    font-size: 22px;
+    text-align: right;
+    font-family: shabnam;
+    text-align: right;
+}
+
+
+.text-privacy {
+	color: #8F8F8F;
+    margin: 20px 0;
+    font-size: 14px;
+    float: right;
+    text-align: right;
+    font-family: shabnam;
+}
+
+
+.footer {
+	text-align: center;
+    background-color: #101010;
+	width: 40%;
+    margin: 0 auto;
+    display: flex;
+    padding: 124px 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text-footer {
+	color: #8F8F8F;
+    font-size: 20px;
+    font-family: shabnam;
+    text-align: center;
+}
+
+
+.circle {
+	color: #51c5a8;
+}
+
+
+.footer-link:hover {
+	color: #51c5a8;
+	text-decoration: none;
+}
+
+.footer-link , .link {
+	color: #F3F3F3;
+    margin: 0 4px;
+    font-family: shabnam;
+    font-size: 14px;
+    text-align: center;
 }
