--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+@font-face {
+  font-family: 'shabnam';
+  src: url('./font/shabnam.ttf');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
